Add overview stats frontent (store, actions, riot tag)
