# server/api/swagger.yaml
@@ -120,6 +120,12 @@ definitions:
     properties:
       kills:
         type: "number"
+      time:
+        type: "number"
+      players:
+        type: "number"
+      hs:
+        type: "number"
   Player:
     required:
     - "id"
