# server/controllers/OverviewService.js
@@ -7,14 +7,13 @@ exports.getOverview = (args, res, next) => {
      * returns Overview
      **/
 
-    res.setHeader('Content-Type', 'application/json');
-    controller.getKills()
-        .then(val => res.end(JSON.stringify({
-            kills: val[0].kills
-        })))
-        .catch(err => {
-            console.log(err);
-            res.end();
-        });
+    const response = {
+        kills: 1,
+        time: 123,
+        players: 312,
+        hs: 123,
+    };
 
+    res.setHeader('Content-Type', 'application/json');
+    res.end(JSON.stringify(response));
 };
